--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
     "html-webpack-plugin": "5.5.0",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "27.4.3",
     "jest-resolve": "27.4.2",
@@ -47,6 +49,7 @@
     "react-app-polyfill": "3.0.0",
     "react-dev-utils": "12.0.1",
     "react-dom": "18.2.0",
+    "react-i18next": "^15.0.0",
     "react-refresh": "0.11.0",
     "resolve": "1.20.0",
     "resolve-url-loader": "4.0.0",
