Add homepage to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio-start",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://metedri.github.io/portfolio",
   "dependencies": {
     "@babel/core": "7.16.0",
     "@emailjs/browser": "^4.4.1",
@@ -31,6 +32,7 @@
     "eslint-webpack-plugin": "3.1.1",
     "file-loader": "6.2.0",
     "fs-extra": "10.0.0",
+    "gh-pages": "^6.1.1",
     "html-webpack-plugin": "5.5.0",
     "i18next": "^23.12.2",
     "i18next-browser-languagedetector": "^8.0.0",
@@ -70,7 +72,9 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "test": "node scripts/test.js",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
